file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
remove_dirs(SOURCES)

if (WIN32)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()

# Build shared library
set(FULL_LIBRARY_NAME ${LIBRARY_NAME}-${LIBRARY_VERSION})
add_library(${FULL_LIBRARY_NAME} SHARED ${SOURCES})

#add_custom_command(
#    TARGET ${FULL_LIBRARY_NAME}
#    POST_BUILD
#    COMMAND ${CMAKE_COMMAND}
#        -DPROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}
#        -DCMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}
#        -DFRAMEWORK_NAME=${FRAMEWORK_NAME}
#        -DLIBRARY_NAME=${LIBRARY_NAME}
#        -DLIBRARY_VERSION=${LIBRARY_VERSION}
#        -DDEPLOY_DIR=${PROJECT_SOURCE_DIR}/../ExampleProject2
#        -P ${PROJECT_SOURCE_DIR}/scripts/deploy_library.cmake
#)
